--- a/APIIncidencias/appsettings.json
+++ b/APIIncidencias/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "ConexMysql" : "server=localhost;user=root;password=ENYTRScf723;database=incidenciasdb"
+    "ConexMysql" : "server=localhost;user=root;password=123456;database=incidenciasdb"
   },
   "Logging": {
     "LogLevel": {
